0.9612_01 2022-06-23
  [CHANGE]
  * Fix descriptor error message.
  * Fields alignment size become the bigger byte size of sizeof(void*) and sizeof(int64_t).
  * Fields alignment rule become the same as C language.
  * Improve compilation error messages.
0.9612 2022-06-23
  [CHANGE]
  * set_error_code throw an exception when the value is not more than or equal to 1.
  * Add error operator to check the code of the excetpion
0.961101 2022-06-22
  [NON BACKWORD COMPATIBLE CHANGES]
  * Fixed rest bugs that Remove Time->timegm and Time->timelocal because of Windows/MinGW compatibility.
0.9611 2022-06-22
  [NON BACKWORD COMPATIBLE CHANGES]
  * Remove Time->timegm and Time->timelocal because of Windows/MinGW compatibility.
    Use CPAN's SPVM::Time::Local module instead.
0.9610 2022-06-22
  [CHANGE]
  * Add error_code operator
  * Add set_error_code operator
  * exception become stack variable from env variable.
  * native mortal stack become stack variable from env variable.
  [NON BACKWORD COMPATIBLE CHANGES]
  * Change the definitions of the following native APIs
    [Before]
    int32_t (*call_class_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    int32_t (*call_class_method_by_name)(SPVM_ENV* env, const char* class_name, const char* method_name, const char* signature, SPVM_VALUE* stack_unused, const char* file, int32_t line);
    int32_t (*call_instance_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    int32_t (*call_instance_method_by_name)(SPVM_ENV* env, void* object, const char* method_name, const char* signature, SPVM_VALUE* stack_unused, const char* file, int32_t line);
    int32_t (*call_spvm_method)(SPVM_ENV* env, int32_t method_id, SPVM_VALUE* args);
    
    [After]
    int32_t (*call_class_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id);
    int32_t (*call_class_method_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, const char* method_name, const char* signature, const char* file, int32_t line);